--- a/src/components/Home/diseWeb.css
+++ b/src/components/Home/diseWeb.css
@@ -5,11 +5,21 @@ flex-direction: column;
 .card-section{
 display: flex;
 flex-direction: row;
-width:80%;
+justify-content: space-evenly;
+width:100%;
 }
 .card-container{
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 30%;
+    height: 100%;
 }
 .card-container>img{
     width:90%;
+    padding: 0;
+}
+.p-container{
+    min-height: 2.5rem;
 }
