what's app and animations

--- a/src/components/Home/nuestos.css
+++ b/src/components/Home/nuestos.css
@@ -1,15 +1,15 @@
 .nuestros-section{
     background-image: url('../../img/tonyJosePapaRepair.jpg');
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 .nuestros-bg-img{
-    width: 100%;
+    width: 95.9%;
+    margin: 0;
     height: 100%;
-    padding: 3rem;
+    padding: 2.1rem;
     display: flex;
     justify-content: center;
-
     background: linear-gradient(180deg,rgba(18,64,124, .7),rgba(18,64,124,1));
 }
 .product-img-container{
@@ -19,6 +19,7 @@
     width:40%;
     text-align: center;
 }
+
 .product-text-container{
     display: flex;
     height: 100%;
