--- a/src/css/home.css
+++ b/src/css/home.css
@@ -108,15 +108,22 @@ img{
 }
 .infoWindow{
     border: 1px solid rgba(18,64,124, 0.9);
-    border-radius: 25px;
+    border-top-right-radius:25px;
+    border-bottom-right-radius:25px;
+    border-bottom-left-radius: 25px;
     width:10rem;
     background-color: rgba(255, 255, 255, 0.2);
     text-align: center;
     color:rgba(18,64,124, 0.9);
     letter-spacing: 5px;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
 }
 .infoWindow>img{
-    height: 10rem;   
+    height: 5rem; 
+    width: 5rem;  
+    padding: 0;
 }
 .eventoInfo{
     width: 40%;
