--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -7,7 +7,9 @@
     background-color: rgba(18,64,124, 1);
     display:flex;
     margin: 0;
-    
+}
+.footerNav > .navbar{
+display: inline;
 }
 .footerNav.nav-menu{
     list-style: none;
@@ -15,15 +17,12 @@
     display:flex;
     flex-direction: column;
     width: 20%;
-    /* justify-content: flex-start; */
-    /* align-items: flex-start; */
     margin: 0;
-    
 }
 .footerNav.nav-menu.navbar-nav{
-    justify-content: flex-end;
+   margin:0;
     padding: 1rem 1rem 1rem 0;
-    align-items: left;
+    /* align-items: left; */
     width: 20%;
     padding-right: 3rem;
 }
